Fixed spacing issues

--- a/assets/css/_utilities.scss
+++ b/assets/css/_utilities.scss
@@ -22,10 +22,6 @@
   background-color: #f5f5f5;
 }
 
-.u-bg-grey {
-  background-color: #f5f5f5;
-}
-
 .u-bg-picture {
   background: url("/images/date.png") fixed;
 }
@@ -109,5 +105,11 @@
 .u-max-width-40 {
   .u-max-width-40 {
     max-width: 400px;
+  }
+}
+
+@include medium-screen{
+  .u-min-width-60 {
+    width: 100%;
   }
 }
