--- a/assets/css/userPanel/stepper.scss
+++ b/assets/css/userPanel/stepper.scss
@@ -104,7 +104,7 @@
     background-color: transparent;
 
     &--active {
-      height: 40vh;
+      height: 30vh;
     }
   }
   &__line-column {
